# qwen3-tts-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: docker.yml  release.yml
scripts/: prepare_decoder_onnx.py  smoke-test-local.sh  verify-audio.sh
src/: download.rs
src/models/: burn_decoder.rs  burn_decoder_generated.rs  mod.rs  onnx.rs
src/models/llama/: mod.rs
src/tts/: engine.rs  prompt.rs
webui/: audio-processor.js  index.html
